<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/divider" />
    
    <TextView
        android:id="@+id/contactUs"
        style="@style/AboutListItem"
        android:drawableLeft="@drawable/email"
        android:text="@string/contact_us" />
    <View style="@style/ListDivider" />
    
    <TextView
        android:id="@+id/visitWebsite"
        style="@style/AboutListItem"
        android:drawableLeft="@drawable/browser"
        android:text="@string/visit_our_website" />
    <View style="@style/ListDivider" />
    
    <!-- 
    <TextView
        android:id="@+id/rateApp"
        style="@style/AboutListItem"
        android:drawableLeft="@drawable/star"
        android:text="@string/rate_this_application" />
    <View style="@style/ListDivider" />
     -->
    
    <TextView
        android:id="@+id/reportBug"
        style="@style/AboutListItem"
        android:drawableLeft="@drawable/bug"
        android:text="@string/report_a_bug" />
    <View style="@style/ListDivider" />
    
    <TextView
        android:id="@+id/tellFriend"
        style="@style/AboutListItem"
        android:drawableLeft="@drawable/email"
        android:text="@string/tell_a_friend" />
    <View style="@style/ListDivider" />
    
    <!-- 
    <TextView
        android:id="@+id/watchVideo"
        style="@style/AboutListItem"
        android:drawableLeft="@drawable/video"
        android:text="@string/watch_video_tutorial" />
     -->
    
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/divider" />
    
    <LinearLayout android:id="@+id/peGeek" style="@style/OtherAppWrapper" android:tag="@string/pe_geek_link">
        <ImageView style="@style/OtherAppImage" android:src="@drawable/pe_geek" />
        <LinearLayout style="@style/OtherAppInner">
            <TextView style="@style/OtherAppTitle" android:text="@string/pe_geek" />
            <TextView style="@style/OtherAppDescription" android:text="@string/pe_geek_desc" />
        </LinearLayout>
    </LinearLayout>
    <View style="@style/ListDivider" />
    
    <LinearLayout android:id="@+id/fitnessTests" style="@style/OtherAppWrapper" android:tag="@string/fitness_tests_link">
        <ImageView style="@style/OtherAppImage" android:src="@drawable/fitness_tests" />
        <LinearLayout style="@style/OtherAppInner">
            <TextView style="@style/OtherAppTitle" android:text="@string/fitness_tests" />
            <TextView style="@style/OtherAppDescription" android:text="@string/fitness_tests_desc" />
        </LinearLayout>
    </LinearLayout>
    <View style="@style/ListDivider" />
    
    <LinearLayout android:id="@+id/peGames" style="@style/OtherAppWrapper" android:tag="@string/pe_games_link">
        <ImageView style="@style/OtherAppImage" android:src="@drawable/pe_games" />
        <LinearLayout style="@style/OtherAppInner">
            <TextView style="@style/OtherAppTitle" android:text="@string/pe_games" />
            <TextView style="@style/OtherAppDescription" android:text="@string/pe_games_desc" />
        </LinearLayout>
    </LinearLayout>
    <View style="@style/ListDivider" />
    
    <LinearLayout android:id="@+id/sportsRules" style="@style/OtherAppWrapper" android:tag="@string/sports_rules_link">
        <ImageView style="@style/OtherAppImage" android:src="@drawable/sports_rules" />
        <LinearLayout style="@style/OtherAppInner">
            <TextView style="@style/OtherAppTitle" android:text="@string/sports_rules" />
            <TextView style="@style/OtherAppDescription" android:text="@string/sports_rules_desc" />
        </LinearLayout>
    </LinearLayout>
    <View style="@style/ListDivider" />
    
    <LinearLayout android:id="@+id/swimGames" style="@style/OtherAppWrapper" android:tag="@string/swim_games_link">
        <ImageView style="@style/OtherAppImage" android:src="@drawable/swim_games" />
        <LinearLayout style="@style/OtherAppInner">
            <TextView style="@style/OtherAppTitle" android:text="@string/swim_games" />
            <TextView style="@style/OtherAppDescription" android:text="@string/swim_games_desc" />
        </LinearLayout>
    </LinearLayout>
    
    </LinearLayout>
    </ScrollView>

</LinearLayout>