<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
    
    <TextView
        style="@style/MusicTextView"
        android:layout_marginTop="0dp"
        android:text="@string/playlist" />
    
    <Button
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        style="@style/MusicTextView"
        android:layout_marginTop="0dp"
        android:text="@string/shuffle_mode" />
    
    <Spinner
        android:id="@+id/shuffleMode"
        style="@style/MusicSpinner" />
    
    <TextView
        style="@style/MusicTextView"
        android:layout_marginTop="0dp"
        android:text="@string/rest_settings" />
    
    <Spinner
        android:id="@+id/volumeMode"
        style="@style/MusicSpinner" />

    <com.musicworkout.view.audioplayer.AudioPlayer
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp" />
    
    </LinearLayout>
    
    </ScrollView>

</LinearLayout>