<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/enter_playlist_name" />
    
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="22sp"
            android:textColor="#202020"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:background="@drawable/button_start" />
        <Button
            android:id="@+id/addSong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_song"
            android:textSize="22sp"
            android:textColor="#202020"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:background="@drawable/button_start" />
    </LinearLayout>    

</LinearLayout>