<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">            
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="@drawable/bg1">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/total_workout_time" />
                
                <TextView
                    android:id="@+id/totalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#ff8000"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="00h:00m:00s"
                    android:background="@drawable/bg2"
                    android:padding="4dp" />
                
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="@drawable/bg1">
                
                <TextView
                    android:id="@+id/currentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/work_for" />
                
                <TextView
                    android:id="@+id/currentTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#ff8000"
                    android:text="00h:00m:00s"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/bg2"
                    android:padding="4dp" />
                
            </LinearLayout>
            
            <TextView
                android:id="@+id/timer"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="00:00"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_bg"
                android:textSize="42sp" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/bg1"
                android:layout_marginTop="10dp"
                android:padding="3dp">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/sets_completed" />
                
                <TextView
                    android:id="@+id/currentSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff8000"
                    android:gravity="center"
                    android:background="@drawable/bg2"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="0 out of 9" />
                
            </LinearLayout>
            
        </LinearLayout>
        
    </ScrollView>
    
     <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                
            <Button 
                android:id="@+id/startWorkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start"
                android:textSize="22sp"
                android:textColor="#202020"
                android:textStyle="bold" />
            
            </LinearLayout>
    
</LinearLayout>